# stamp-verify

./: LICENSE  README.md  SIGNING.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
gui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
gui/src/: App.tsx  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: main.rs
src/: cli.ts  node.ts  verify.ts
src/core/: verify.ts
