[package]
name = "stamp-verify-gui"
version = "0.1.0"
description = "BA | Stamp blockchain timestamp verifier — desktop GUI"
authors = ["Aletheia Tech Ltd"]
license = "MIT"
repository = "https://github.com/stamp-verify/stamp-verify"
edition = "2021"

[lib]
name = "stamp_verify_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
